// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DashboardSectionLoadingSkeleton renders a single skeleton when count is 1 and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangle MuiSkeleton-wave css-1lxq4wd-MuiSkeleton-root"
      style="width: 100%; height: 100px;"
    />
  </div>
</DocumentFragment>
`;

exports[`DashboardSectionLoadingSkeleton renders multiple skeletons when count is greater than 1 and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangle MuiSkeleton-wave css-1lxq4wd-MuiSkeleton-root"
      style="width: 100%; height: 100px;"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangle MuiSkeleton-wave css-1lxq4wd-MuiSkeleton-root"
      style="width: 100%; height: 100px;"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangle MuiSkeleton-wave css-1lxq4wd-MuiSkeleton-root"
      style="width: 100%; height: 100px;"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangle MuiSkeleton-wave css-1lxq4wd-MuiSkeleton-root"
      style="width: 100%; height: 100px;"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangle MuiSkeleton-wave css-1lxq4wd-MuiSkeleton-root"
      style="width: 100%; height: 100px;"
    />
  </div>
</DocumentFragment>
`;

exports[`DashboardSectionLoadingSkeleton renders with custom props and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-wave custom-skeleton css-1lxq4wd-MuiSkeleton-root"
      style="width: 200px; height: 50px;"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-wave custom-skeleton css-1lxq4wd-MuiSkeleton-root"
      style="width: 200px; height: 50px;"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-wave custom-skeleton css-1lxq4wd-MuiSkeleton-root"
      style="width: 200px; height: 50px;"
    />
  </div>
</DocumentFragment>
`;

exports[`DashboardSectionLoadingSkeleton renders with default props and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangle MuiSkeleton-wave css-1lxq4wd-MuiSkeleton-root"
      style="width: 100%; height: 100px;"
    />
  </div>
</DocumentFragment>
`;
